Updating nvidia for instllation semi-sort-working
Change-Id: I91b7c6e3a025bc1bde13b107a7011fa8e5022385

--- a/roles/abm-software/tasks/csi-robin.yaml
+++ b/roles/abm-software/tasks/csi-robin.yaml
@@ -280,3 +280,14 @@
   - robin-install-disk-ready
   - robin-install-post
   - robin-install-actual
+
+- name: Change ownership of robin install folder and all files under
+  file:
+    path: "{{ robin_install_folder }}"
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+    recurse: yes
+  tags:
+  - robin-io
+  - robin-install
+  - robin-intall-setup
