--- a/all-install-abm-software.yml
+++ b/all-install-abm-software.yml
@@ -31,10 +31,13 @@
     tags:
     - always
   roles:
+  - abm-install
   - abm-software
   - abm-post-install
   - ansible-pull
   - abm-login-token
+  - coral-tpu-install
+  - nvidia-drivers-install
   vars: []
   tags:
-  - hardware
+  - software
