Adding condition to IAM permission apply
Change-Id: I40f2e6ae0ba21735c1676d95228b4a27e56131ca

--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -23,7 +23,7 @@
 ###
 - name: Setup Workload Identity for External Secrets
   command:
-    cmd: gcloud iam service-accounts add-iam-policy-binding --role roles/iam.workloadIdentityUser --member "serviceAccount:{{ google_project_id }}.svc.id.goog[external-secrets/external-secrets]" es-k8s-{{ cluster_name }}@{{ google_service_account_project_id }}.iam.gserviceaccount.com --project {{ google_service_account_project_id }}
+    cmd: gcloud iam service-accounts add-iam-policy-binding --condition="None" --role roles/iam.workloadIdentityUser --member "serviceAccount:{{ google_project_id }}.svc.id.goog[external-secrets/external-secrets]" es-k8s-{{ cluster_name }}@{{ google_service_account_project_id }}.iam.gserviceaccount.com --project {{ google_service_account_project_id }}
   when:
     - (primary_cluster_machine is defined)
     - (primary_cluster_machine == true)
