fixed bug in missing directory
Change-Id: Ife436b1a7e33eb4a4e0f95674d9cc12a00d4ec12

--- a/roles/ready-linux/tasks/setup-cron-jobs.yml
+++ b/roles/ready-linux/tasks/setup-cron-jobs.yml
@@ -56,6 +56,17 @@
   - gcloud-update
 
 ### gcloud cron updates
+- name: Create scripts folder for jobs
+  file:
+    path: "{{ abm_install_folder }}/scripts"
+    state: directory
+    mode: '0700'
+    owner: root
+    group: root
+  tags:
+  - cron-updates
+  - gcloud-update
+
 - name: Script for gcloud cron update
   template:
     src: "gcloud-update-script.sh"
