removing aux tasks that arent necessary until fixed later
Change-Id: Icaccfb52c2ee7e832e4c4ef8d81e82c64d530f3a

--- a/roles/abm-software/tasks/csi-robin.yaml
+++ b/roles/abm-software/tasks/csi-robin.yaml
@@ -109,177 +109,177 @@
   - robin-install
   - robin-intall-setup
 
-- name: "Install Robin using Reporting Secret"
-  ignore_errors: true
-  shell: |
-    {{ robin_install_folder }}/install-robin.sh --reporting-secret={{ robin_acm_secret_name }} --repo=gcr.io/robinio-public/robin-storage -y
-  environment:
-    KUBECONFIG: "{{ kubeconfig_shared_location }}"
-  args:
-    chdir: "{{ robin_install_folder }}"
-  register: robin_install_status
-  when:
-  - primary_cluster_machine is defined and primary_cluster_machine == true
-  - robin-install-reporting-secret is defined and robin-install-reporting-secret == true
-  tags:
-  - robin-install
-  - robin-install-commit
-  - robin-install-actual
+# - name: "Install Robin using Reporting Secret"
+#   ignore_errors: true
+#   shell: |
+#     {{ robin_install_folder }}/install-robin.sh --reporting-secret={{ robin_acm_secret_name }} --repo=gcr.io/robinio-public/robin-storage -y
+#   environment:
+#     KUBECONFIG: "{{ kubeconfig_shared_location }}"
+#   args:
+#     chdir: "{{ robin_install_folder }}"
+#   register: robin_install_status
+#   when:
+#   - primary_cluster_machine is defined and primary_cluster_machine == true
+#   - robin-install-reporting-secret is defined and robin-install-reporting-secret == true
+#   tags:
+#   - robin-install
+#   - robin-install-commit
+#   - robin-install-actual
 
-- name: "Install Robin using 90day Trial"
-  ignore_errors: true
-  shell: |
-    {{ robin_install_folder }}/install-robin.sh --repo=gcr.io/robinio-public/robin-storage -y
-  environment:
-    KUBECONFIG: "{{ kubeconfig_shared_location }}"
-  args:
-    chdir: "{{ robin_install_folder }}"
-  register: robin_install_status
-  when:
-  - (primary_cluster_machine is defined)
-  - (primary_cluster_machine == true)
-  - robin-install-reporting-secret is not defined or robin-install-reporting-secret == false
-  tags:
-  - robin-install
-  - robin-install-commit
-  - robin-install-actual
+# - name: "Install Robin using 90day Trial"
+#   ignore_errors: true
+#   shell: |
+#     {{ robin_install_folder }}/install-robin.sh --repo=gcr.io/robinio-public/robin-storage -y
+#   environment:
+#     KUBECONFIG: "{{ kubeconfig_shared_location }}"
+#   args:
+#     chdir: "{{ robin_install_folder }}"
+#   register: robin_install_status
+#   when:
+#   - (primary_cluster_machine is defined)
+#   - (primary_cluster_machine == true)
+#   - robin-install-reporting-secret is not defined or robin-install-reporting-secret == false
+#   tags:
+#   - robin-install
+#   - robin-install-commit
+#   - robin-install-actual
 
-- name: Robin install output
-  debug:
-    msg: "{{ robin_install_status }}"
-  when:
-  - (primary_cluster_machine is defined)
-  - (primary_cluster_machine == true)
-  tags:
-  - robin-io
-  - robin-install
-  - robin-install-commit
-  - robin-install-actual
+# - name: Robin install output
+#   debug:
+#     msg: "{{ robin_install_status }}"
+#   when:
+#   - (primary_cluster_machine is defined)
+#   - (primary_cluster_machine == true)
+#   tags:
+#   - robin-io
+#   - robin-install
+#   - robin-install-commit
+#   - robin-install-actual
 
-#####  Wait till basic robin operator & components installs
+# #####  Wait till basic robin operator & components installs
 
-- name: Wait on Robin Basic install top complete
-  shell:
-    cmd: "kubectl wait --for=condition=ready pod -l robin.io/vnodetype=robin -n robinio"
-  environment:
-    KUBECONFIG: "{{ kubeconfig_shared_location }}"
-  tags:
-  - robin-io
-  - robin-verify
-  - robin-install
-  - robin-install-actual
-
-- name: Get Robin Client and can take 10 minutes
-  command:
-    cmd: /usr/local/bin/robin-get-client.sh
-  args:
-    creates: "/usr/local/bin/robin"
-  until: robin_binary_status.rc == 0
-  register: robin_binary_status
-  retries: "{{ robin_client_retries }}"
-  delay: "{{ robin_client_delay }}"
-  tags:
-  - robin-io
-  - robin-install
-  - robin-install-client
-  - robin-install-actual
-
-- name: Login the Robin Client
-  command:
-    cmd: /usr/local/bin/robin-login-client.sh
-  until: robin_client_status.rc == 0
-  register: robin_client_status
-  retries: "{{ robin_client_retries }}"
-  delay: "{{ robin_client_delay }}"
-  tags:
-  - robin-io
-  - robin-install
-  - robin-install-client
-  - robin-install-actual
-
-# Wait on Robin to have all services up
-# TODO: This is NOT ready, this needs to loop till all services are up and none are critical
-- name: Wait on robin to have all services up on all hosts
-  shell:
-    # NOTE -vqz for grep is to pass IF not found, do not pass if found (THIS CAN BE AN ISSUE IF OUTPUT CHANGES, SAY FROM critical TO error)
-    # 'critical' is the current state of failing services for robin host
-    cmd: "robin host list --services --json | jq -r '.items[].services' | grep -vqz critical"
-  until: robin_host_status.rc == 0
-  register: robin_host_status
-  retries: "{{ robin_client_retries }}"
-  delay: "{{ robin_client_delay }}"
-  when:
-  - (primary_cluster_machine is defined)
-  - (primary_cluster_machine == true)
-  tags:
-  - robin-install
-  - robin-install-commit
-  - robin-install-post
-  - robin-install-actual
-
-# ansible-playbook all-install-abm-software.yml -i inventory --extra-vars="@build-artifacts/instance-run-vars.yaml" --skip-tags gcloud-mutate --limit patagonia* --tags always,robin-install-disk-ready
-
-# - name: Verify all Robin Host has Storage
+# - name: Wait on Robin Basic install top complete
 #   shell:
-#     cmd: robin host list
+#     cmd: "kubectl wait --for=condition=ready pod -l robin.io/vnodetype=robin -n robinio"
+#   environment:
+#     KUBECONFIG: "{{ kubeconfig_shared_location }}"
+#   tags:
+#   - robin-io
+#   - robin-verify
+#   - robin-install
+#   - robin-install-actual
 
-### Manually add disks to robin by setting Role to Storage
-- name: Copy Disk Setup script for Robin
-  copy:
-    src: robin-disk-storage-setup.sh
-    dest: "{{ robin_install_folder }}"
-    owner: root
-    group: root
-    mode: "0744"
-  tags:
-  - robin-install
-  - robin-install-commit
-  - robin-install-post
-  - robin-install-disk-setup
-  - robin-install-actual
+# - name: Get Robin Client and can take 10 minutes
+#   command:
+#     cmd: /usr/local/bin/robin-get-client.sh
+#   args:
+#     creates: "/usr/local/bin/robin"
+#   until: robin_binary_status.rc == 0
+#   register: robin_binary_status
+#   retries: "{{ robin_client_retries }}"
+#   delay: "{{ robin_client_delay }}"
+#   tags:
+#   - robin-io
+#   - robin-install
+#   - robin-install-client
+#   - robin-install-actual
 
-- name: Run disk setup script
-  command:
-    cmd: "{{ robin_install_folder }}/robin-disk-storage-setup.sh"
-  when:
-  - (primary_cluster_machine is defined)
-  - (primary_cluster_machine == true)
-  tags:
-  - robin-install
-  - robin-install-commit
-  - robin-install-post
-  - robin-install-disk-setup
-  - robin-install-actual
+# - name: Login the Robin Client
+#   command:
+#     cmd: /usr/local/bin/robin-login-client.sh
+#   until: robin_client_status.rc == 0
+#   register: robin_client_status
+#   retries: "{{ robin_client_retries }}"
+#   delay: "{{ robin_client_delay }}"
+#   tags:
+#   - robin-io
+#   - robin-install
+#   - robin-install-client
+#   - robin-install-actual
 
-### Verify Disks have been convereted to ONLINE
-- name: Copy Disk Verify Script for Robin
-  copy:
-    src: robin-disk-completed.sh
-    dest: "{{ robin_install_folder }}"
-    owner: root
-    group: root
-    mode: "0744"
-  tags:
-  - robin-install
-  - robin-install-disk-ready
-  - robin-install-post
-  - robin-install-actual
+# # Wait on Robin to have all services up
+# # TODO: This is NOT ready, this needs to loop till all services are up and none are critical
+# - name: Wait on robin to have all services up on all hosts
+#   shell:
+#     # NOTE -vqz for grep is to pass IF not found, do not pass if found (THIS CAN BE AN ISSUE IF OUTPUT CHANGES, SAY FROM critical TO error)
+#     # 'critical' is the current state of failing services for robin host
+#     cmd: "robin host list --services --json | jq -r '.items[].services' | grep -vqz critical"
+#   until: robin_host_status.rc == 0
+#   register: robin_host_status
+#   retries: "{{ robin_client_retries }}"
+#   delay: "{{ robin_client_delay }}"
+#   when:
+#   - (primary_cluster_machine is defined)
+#   - (primary_cluster_machine == true)
+#   tags:
+#   - robin-install
+#   - robin-install-commit
+#   - robin-install-post
+#   - robin-install-actual
 
-- name: Verify we have host number of disks as Storage. Retry command until successful or timeout
-  command:
-    cmd: "{{ robin_install_folder }}/robin-disk-completed.sh {{ ansible_play_hosts_all | length }}"
-  register: robin_storage_role_status
-  until: robin_storage_role_status.rc == 0
-  retries: "{{ robin_client_retries }}"
-  delay: "{{ robin_client_delay }}"
-  when:
-  - (primary_cluster_machine is defined)
-  - (primary_cluster_machine == true)
-  tags:
-  - robin-install
-  - robin-install-disk-ready
-  - robin-install-post
-  - robin-install-actual
+# # ansible-playbook all-install-abm-software.yml -i inventory --extra-vars="@build-artifacts/instance-run-vars.yaml" --skip-tags gcloud-mutate --limit patagonia* --tags always,robin-install-disk-ready
+
+# # - name: Verify all Robin Host has Storage
+# #   shell:
+# #     cmd: robin host list
+
+# ### Manually add disks to robin by setting Role to Storage
+# - name: Copy Disk Setup script for Robin
+#   copy:
+#     src: robin-disk-storage-setup.sh
+#     dest: "{{ robin_install_folder }}"
+#     owner: root
+#     group: root
+#     mode: "0744"
+#   tags:
+#   - robin-install
+#   - robin-install-commit
+#   - robin-install-post
+#   - robin-install-disk-setup
+#   - robin-install-actual
+
+# - name: Run disk setup script
+#   command:
+#     cmd: "{{ robin_install_folder }}/robin-disk-storage-setup.sh"
+#   when:
+#   - (primary_cluster_machine is defined)
+#   - (primary_cluster_machine == true)
+#   tags:
+#   - robin-install
+#   - robin-install-commit
+#   - robin-install-post
+#   - robin-install-disk-setup
+#   - robin-install-actual
+
+# ### Verify Disks have been convereted to ONLINE
+# - name: Copy Disk Verify Script for Robin
+#   copy:
+#     src: robin-disk-completed.sh
+#     dest: "{{ robin_install_folder }}"
+#     owner: root
+#     group: root
+#     mode: "0744"
+#   tags:
+#   - robin-install
+#   - robin-install-disk-ready
+#   - robin-install-post
+#   - robin-install-actual
+
+# - name: Verify we have host number of disks as Storage. Retry command until successful or timeout
+#   command:
+#     cmd: "{{ robin_install_folder }}/robin-disk-completed.sh {{ ansible_play_hosts_all | length }}"
+#   register: robin_storage_role_status
+#   until: robin_storage_role_status.rc == 0
+#   retries: "{{ robin_client_retries }}"
+#   delay: "{{ robin_client_delay }}"
+#   when:
+#   - (primary_cluster_machine is defined)
+#   - (primary_cluster_machine == true)
+#   tags:
+#   - robin-install
+#   - robin-install-disk-ready
+#   - robin-install-post
+#   - robin-install-actual
 
 - name: Change ownership of robin install folder and all files under
   file:
