updating docs to run cloud instances
Change-Id: I2d4f142bbea66e737bee4056d68cc3b19f86c674

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ inventory.yaml
 # GCP inventory files generated
 gcp.yaml
 gcp.yml
+!inventory/gcp.yml # this is a symlink, it SHOULD exist
 
 !inventory/inventory.yaml
 inventory/host_vars/*.yaml
