adding tags to the mesh commander jobs

--- a/roles/abm-post-install/tasks/install-mesh-commander.yml
+++ b/roles/abm-post-install/tasks/install-mesh-commander.yml
@@ -19,3 +19,6 @@
   when:
     - (mesh_cmd_host is defined)
     - (mesh_cmd_passphrase is defined)
+  tags:
+  - abm-post-install
+  - mesh-commander
