--- a/roles/google-tools/vars/main.yml
+++ b/roles/google-tools/vars/main.yml
@@ -16,12 +16,13 @@
 # vars file for google-tools
 
 # gcloud version to download (gcloud version) -- roughly kept up-to-date, the system will update when installed, keeping up-to-date just makes the install a little faster
-gcloud_version: "513.0.0"
+gcloud_version: "558.0.0"
 
-kubectx_version: "0.9.4"
+# Kubectx & Kubens version https://github.com/ahmetb/kubectx/releases
+kubectx_version: "0.9.5"
 
 # K9s binary version (https://github.com/derailed/k9s/releases)
-k9s_version: "v0.40.5"
+k9s_version: "v0.50.18"
 
 # Kubestr Version (https://github.com/kastenhq/kubestr/releases/)
-kubestr_version: v0.4.48"
+kubestr_version: v0.4.49"
